[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wk-toolkit"
version = "1.0.0"
description = "A toolkit for WebKit development workflows"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "GitPython>=3.1",
]

[project.scripts]
wk = "wk_toolkit.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
